tests/NormalTests/paczka1/fuzzy1/64903870.err
Error in line 11: APHz26FN A296 68,5
Error in line 22: KnMMpbfgUl A672 29,0
Error in line 27: ENMJq A672 120,3
